--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "express": "^4.21.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "localstorage": "^1.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.4.0",
     "nocache": "^4.0.0",
+    "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.7",
+    "store": "^2.0.12",
     "tar": "^7.4.3"
   },
   "devDependencies": {
